syntax = "proto3";
package wpp;
import "google/protobuf/timestamp.proto";
option csharp_namespace = "WoWPacketParser.Proto";

message PacketBase {
  int32 number = 1;
  string opcode = 2;
  google.protobuf.Timestamp time = 3;
  string stringData = 4;
}

message PacketHolder {
  PacketBase baseData = 1;
  oneof kind {
      PacketChat chat = 2;
      PacketQueryCreatureResponse queryCreatureResponse = 3;
      PacketEmote emote = 4;
      PacketPlaySound playSound = 5;
      PacketPlayMusic playMusic = 6;
      PacketPlayObjectSound playObjectSound = 7;
      PacketGossipHello gossipHello = 8;
  }
}

message Packets {
  repeated PacketHolder packets = 1;
}

enum UniversalHighGuid {
  Null = 0;
  Uniq = 1;
  Player = 2;
  Item = 3;
  WorldTransaction = 4;
  StaticDoor = 5;
  Transport = 6;
  Conversation = 7;
  Creature = 8;
  Vehicle = 9;
  Pet = 10;
  GameObject = 11;
  DynamicObject = 12;
  AreaTrigger = 13;
  Corpse = 14;
  LootObject = 15;
  SceneObject = 16;
  Scenario = 17;
  AIGroup = 18;
  DynamicDoor = 19;
  ClientActor = 20;
  Vignette = 21;
  CallForHelp = 22;
  AIResource = 23;
  AILock = 24;
  AILockTicket = 25;
  ChatChannel = 26;
  Party = 27;
  Guild = 28;
  WowAccount = 29;
  BNetAccount = 30;
  GMTask = 31;
  MobileSession = 32;
  RaidGroup = 33;
  Spell = 34;
  Mail = 35;
  WebObj = 36;
  LFGObject = 37;
  LFGList = 38;
  UserRouter = 39;
  PVPQueueGroup = 40;
  UserClient = 41;
  PetBattle = 42;
  UniqUserClient = 43;
  BattlePet = 44;
  CommerceObj = 45;
  ClientSession = 46;
  Cast = 47;
  Invalid = 48;
}

message UniversalGuid {
  uint32 entry = 1;
  UniversalHighGuid type = 2;
  oneof kind {
    UniversalGuid64 guid64 = 3;
    UniversalGuid128 guid128 = 4;
  }
}

message UniversalGuid64 {
  uint64 low = 1;
  uint64 high = 2;
}

message UniversalGuid128 {
  uint64 low = 1;
  uint64 high = 2;
}

message PacketChat {
  int32 type = 1;
  int32 language = 2;
  UniversalGuid sender = 3;
  UniversalGuid target = 4;
  uint32 flags = 5;
  string text = 6;
}

message PacketEmote {
  int32 emote = 1;
  UniversalGuid sender = 2;
}

message PacketPlaySound {
  uint32 sound = 1;
  UniversalGuid source = 2;
}

message PacketPlayObjectSound {
  uint32 sound = 1;
  UniversalGuid source = 2;
  UniversalGuid target = 3;
}

message PacketPlayMusic {
  uint32 music = 1;
  UniversalGuid target = 2;
}

message PacketGossipHello {
  UniversalGuid gossipSource = 1;
}

message PacketQueryCreatureResponse {
  uint32 entry = 1;
  bool hasData = 2;
  bool leader = 3;
  string name = 4;
  string nameAlt = 5;
  uint32 typeFlags = 6;
  uint32 typeFlags2 = 7;
  int32 type = 8;
  int32 family = 9;
  int32 rank = 10;
  repeated uint32 killCredits = 11;
  repeated uint32 models = 12;
  float hpMod = 13;
  float manaMod = 14;
  repeated uint32 questItems = 115;
  uint32 movementId = 16;
  uint32 hpScalingExp = 17;
  uint32 expansion = 18;
  string title = 19;
  string titleAlt = 20;
  string iconName = 21;
}